--- a/indexmb.html
+++ b/indexmb.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
           <div class="col-sm-8">
-            <div class="alert alert-primary" role="alert">
+            <div id="estado" class="alert alert-primary" role="alert">
                 Tocá empezar para jugar!
             </div>
           </div>
@@ -30,12 +30,12 @@
       </div>
       <div class="container" id="tablero">
         <div class="row">
-            <div class="col-sm" id="cuadro-1">a</div>
-            <div class="col-sm" id="cuadro-2">b</div>
+            <div class="col-sm" name="cuadros" id="cuadro-1">a</div>
+            <div class="col-sm" name="cuadros" id="cuadro-2">b</div>
         </div>
         <div class="row">
-            <div class="col-sm" id="cuadro-3">c</div>
-            <div class="col-sm" id="cuadro-4">d</div>
+            <div class="col-sm" name="cuadros" id="cuadro-3">c</div>
+            <div class="col-sm" name="cuadros" id="cuadro-4">d</div>
         </div>
       </div>
 
