--- a/indexmb.html
+++ b/indexmb.html
@@ -30,12 +30,12 @@
       </div>
       <div class="container" id="tablero">
         <div class="row">
-            <div class="col-sm" name="cuadros" id="cuadro-1">a</div>
-            <div class="col-sm" name="cuadros" id="cuadro-2">b</div>
+            <div class="col-sm" name="cuadros" id="cuadro-1"></div>
+            <div class="col-sm" name="cuadros" id="cuadro-2"></div>
         </div>
         <div class="row">
-            <div class="col-sm" name="cuadros" id="cuadro-3">c</div>
-            <div class="col-sm" name="cuadros" id="cuadro-4">d</div>
+            <div class="col-sm" name="cuadros" id="cuadro-3"></div>
+            <div class="col-sm" name="cuadros" id="cuadro-4"></div>
         </div>
       </div>
 
