--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       </div>
       <div class="container" id="tablero">
         <div class="row">
-            <div class="col-sm" name="cuadros" id="cuadro-1"></div>
-            <div class="col-sm" name="cuadros" id="cuadro-2"></div>
+            <div class="col" name="cuadros" id="cuadro-1"></div>
+            <div class="col" name="cuadros" id="cuadro-2"></div>
         </div>
         <div class="row">
-            <div class="col-sm" name="cuadros" id="cuadro-3"></div>
-            <div class="col-sm" name="cuadros" id="cuadro-4"></div>
+            <div class="col" name="cuadros" id="cuadro-3"></div>
+            <div class="col" name="cuadros" id="cuadro-4"></div>
         </div>
       </div>
 
