--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="col" name="cuadros" id="cuadro-2"></div>
         </div>
         <div class="row">
-            <div class="col" name="cuadros" id="cuadro-3"></div>
+            <div class="col" name="cuadros" id="cuadro-3">a</div>
             <div class="col" name="cuadros" id="cuadro-4"></div>
         </div>
       </div>
